<resources>
    <string name="app_name">Drivio</string>
    <string name="add_electric_car">Add electric car</string>
    <string name="discover">Discover</string>
    <string name="bookings">Bookings</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="user_welcome_msg">Join the most innovative car sharing platform in the world!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Login</string>
    <string name="reset_sign_in">Reset</string>
    <string name="action_register">Register</string>
    <string name="user_list">UserList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="take_picture" />
    <string name="take_picture_description" />

    <string name="action_update_user">Update</string>
    <string name="change_language">EN/NL</string>
    <string name="translate">Select your Language</string>
    <string name="delete_all_users_tooltip">Delete All Users</string>
    <string name="add_new_user">New User</string>
    <string name="back_to_login">Login</string>
    <string name="delete_user_tooltip">Delete User</string>
    <string name="logout">Logout</string>
    <string name="view_my_cars">View my cars</string>
    <string name="view_my_statistics">View my statistics</string>
    <string name="my_advertisements">My Advertisements</string>
    <string name="add_hydrogen_car">Add hydrogen car</string>
    <string name="add_fuel_car">Add fuel car</string>
    <string name="filter_1">Price less than 50 euro</string>
    <string name="calculate_tco">Calculate TCO</string>
    <string name="build_year">Build year</string>
    <string name="fuel_type">Fuel type</string>
    <string name="model">Model</string>
    <string name="brand">Brand</string>
    <string name="carid">CarId</string>
    <string name="numberplate">Numberplate</string>
    <string name="car_type">Car Type</string>
    <string name="gearbox">Gearbox</string>
    <string name="range">Range</string>
    <string name="charge_connection">Charge Connection</string>
    <string name="charge_speed">Charge Speed</string>
    <string name="fast_charge_speed">Fast Charge Speed</string>
    <string name="wh_per_km_int">Wh per km (int)</string>
    <string name="post">Post</string>
    <string name="new_price">New price</string>
    <string name="additional_costs">Additional costs</string>
    <string name="kilometers_per_year">Kilometers per year</string>
    <string name="tco">TCO</string>
    <string name="years_of_use">Years of use</string>
    <string name="calculate_usage_costs">Calculate usage costs</string>
    <string name="map">Map</string>
    <string name="reserve">Reserve</string>
    <string name="create_advertisement">Create advertisement</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="select_dates">Select Dates</string>
    <string name="startdate">Startdate</string>
    <string name="enddate">Enddate</string>
    <string name="edit_advertisement">Edit Advertisement</string>
    <string name="edit_reservation">Edit Reservation</string>
    <string name="navigate_to_car">Navigate to car</string>
</resources>

