<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.LoggedInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="Logout"
            android:src="@drawable/ic_logout"
            android:text="@string/logout"
            android:tooltipText="@string/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.735"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_view_my_cars"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/view_my_cars"
            app:layout_constraintTop_toBottomOf="@id/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_view_statistics"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/view_my_statistics"
            app:layout_constraintTop_toBottomOf="@id/button_view_my_cars"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/btnAdvertisement"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/my_advertisements"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_view_statistics" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>